crates/alder-parse/src/expression/snapshots/alder_parse__expression__match___tests__match_no_trailing_comma.snap
---
source: crates/alder-parse/src/expression/match_.rs
description: "match x { 1 => a, 2 => b }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 27,
        },
    },
    value: Match {
        scrutinee: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
            value: Var(
                "x",
            ),
        },
        arms: [
            MatchArm {
                patterns: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 11,
                            },
                            end: Position {
                                line: 1,
                                column: 12,
                            },
                        },
                        value: Number(
                            NumberLit {
                                value: 1.0,
                                text: "1",
                            },
                        ),
                    },
                ],
                guard: None,
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 16,
                        },
                        end: Position {
                            line: 1,
                            column: 17,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
            },
            MatchArm {
                patterns: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 19,
                            },
                            end: Position {
                                line: 1,
                                column: 20,
                            },
                        },
                        value: Number(
                            NumberLit {
                                value: 2.0,
                                text: "2",
                            },
                        ),
                    },
                ],
                guard: None,
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 24,
                        },
                        end: Position {
                            line: 1,
                            column: 25,
                        },
                    },
                    value: Var(
                        "b",
                    ),
                },
            },
        ],
    },
}
