crates/alder-parse/src/expression/snapshots/alder_parse__expression__match___tests__match_scrutinee_path_no_record_ctor.snap
---
source: crates/alder-parse/src/expression/match_.rs
description: "match Shape::Empty { Shape::Empty => 1 }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 41,
        },
    },
    value: Match {
        scrutinee: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 19,
                },
            },
            value: Path(
                Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 7,
                                },
                                end: Position {
                                    line: 1,
                                    column: 12,
                                },
                            },
                            value: "Shape",
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 14,
                                },
                                end: Position {
                                    line: 1,
                                    column: 19,
                                },
                            },
                            value: "Empty",
                        },
                    ],
                },
            ),
        },
        arms: [
            MatchArm {
                patterns: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 22,
                            },
                            end: Position {
                                line: 1,
                                column: 34,
                            },
                        },
                        value: Ctor {
                            path: Path {
                                segments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 22,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 27,
                                            },
                                        },
                                        value: "Shape",
                                    },
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 29,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 34,
                                            },
                                        },
                                        value: "Empty",
                                    },
                                ],
                            },
                            args: [],
                        },
                    },
                ],
                guard: None,
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 38,
                        },
                        end: Position {
                            line: 1,
                            column: 39,
                        },
                    },
                    value: Number(
                        NumberLit {
                            value: 1.0,
                            text: "1",
                        },
                    ),
                },
            },
        ],
    },
}
